tests/neg/targetName-override.check
-- Error: tests/neg/targetName-override.scala:14:6 ---------------------------------------------------------------------
14 |class Beta extends Alpha[String] {  // error: needs to be abstract
   |      ^
   |class Beta needs to be abstract, since there is a deferred declaration of method foo in class Alpha of type (x: String): String which is not implemented in a subclass
-- [E038] Declaration Error: tests/neg/targetName-override.scala:16:35 -------------------------------------------------
16 |  @targetName("foo1") override def foo() = 1    // error: different signature than overridden
   |                                   ^
   |                                   method foo has a different target name than the overridden declaration

longer explanation available when compiling with `-explain`
-- [E038] Declaration Error: tests/neg/targetName-override.scala:20:15 -------------------------------------------------
20 |  override def ++ (xs: Alpha[String]): Alpha[String] = this   // error: different signature than overidden
   |               ^
   |               method ++ has a different target name than the overridden declaration

longer explanation available when compiling with `-explain`
